# AdventOfCode2021

./: Cargo.toml
benches/: day01.rs  main.rs
src/: common.rs  lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day03.rs  day04.rs  mod.rs
