[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
author = ["Johan Cervantes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "advent_of_code"
path = "src/lib.rs"

[[bin]]
name = "advent_of_code_solver"
path = "src/main.rs"

[toolchain]
channel = "nightly"

[dependencies]
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false